add edits to make all functions work aside from registerThing. Still working on registerThing
